добавила текст в секцию Чем мы занимаемся

--- a/index.html
+++ b/index.html
@@ -129,13 +129,43 @@
                 <h2 class="heading">Чем мы занимаемся</h2>
                 <ul class="work-container list">
                     <li class="work-item">
-                        <img src="./images/1.jpg" alt="Человек набирает код на планшете" width="370" height="294"/>
+                        <img 
+                        src="./images/1.jpg" 
+                        alt="Человек набирает код на планшете" 
+                        width="370" height="294"
+                        />
+
+                        <div class="examples-of-work">
+                            <p class="text-on-image">
+                                десктопные приложения
+                            </p>
+                        </div>
                     </li>
                     <li class="work-item">
-                        <img src="./images/2.jpg" alt="Человек работает с телефоном и ноутбуком" width="370" height="294"/>
+                        <img 
+                        src="./images/2.jpg" 
+                        alt="Человек работает с телефоном и ноутбуком" 
+                        width="370" height="294"
+                        />
+
+                        <div class="examples-of-work">
+                            <p class="text-on-image">
+                                мобильные приложения                                
+                            </p>
+                        </div>
                    </li>
                     <li class="work-item">
-                        <img src="./images/3.jpg" alt="Дизайнер определяет цветовую гаму" width="370" height="294"/>
+                        <img 
+                        src="./images/3.jpg" 
+                        alt="Дизайнер определяет цветовую гаму" 
+                        width="370" height="294"
+                        />
+
+                        <div class="examples-of-work">
+                            <p class="text-on-image">
+                               дизайнерские решения 
+                            </p>
+                        </div>
                     </li>
                 </ul>
              </div>
