--- a/portfolio.html
+++ b/portfolio.html
@@ -87,11 +87,16 @@
 
                     <li class="item">
                         <a href="" class="item-link">
-                            <img 
-                            src="./images/website.jpg" 
-                            alt="Веб-сайт Технокряк" 
-                            width="370" height="294"
-                            />
+                             <img 
+                                src="./images/website.jpg" 
+                                alt="Веб-сайт Технокряк" 
+                                width="370" height="294"
+                             />    
+                            <div class="card-thumb">                                
+                                <p>
+                                Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.
+                                </p>
+                            </div>
 
                         <div class="card-content">
                             <h3 class="card-desc">Технокряк</h3>
