--- a/index.html
+++ b/index.html
@@ -59,9 +59,15 @@
                 <h2 class="hero-title">
                     эффективные решения для вашего бизнеса
                 </h2>
-                <button class="button" type="button">
+                <button class="button" type="button" data-modal-open>
                     Заказать услугу
                 </button>
+            </div>
+            <div class="backdrop is-hidden" data-modal>
+                <div class="modal">
+                    <p></p>
+                    <button data-modal-close> Закрыть</button>
+                </div>
             </div>
         </section>
 
@@ -482,6 +488,9 @@
         </div>
         </div>
     </footer>
+
+<script src="./modal.js"></script>
+
 </body>
 
 </html>
