--- a/index.html
+++ b/index.html
@@ -66,7 +66,11 @@
             <div class="backdrop is-hidden" data-modal>
                 <div class="modal">
                     <p></p>
-                    <button data-modal-close> Закрыть</button>
+                    <button class="close-button" data-modal-close>
+                        <svg class="close-button-icon" heigth="11" width="11">
+                            <use href="./images/icons.svg#icon-close-black"></use>
+                        </svg>
+                        </button>
                 </div>
             </div>
         </section>
